# xsd2cpp

./: 1.xml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  test
.cache/clangd/index/: CMakeCXXCompilerId.cpp.4668A9B47B004250.idx  base.hxx.589D71D5E333B493.idx  gen.cpp.1AAEF1B627A87E12.idx  gen.cpp.71893C49C986F5D5.idx  gen.cpp.AC99AFA2DFD86E18.idx  reader.cpp.643B307DF9F958D2.idx  reader.cpp.80D67220372C06EE.idx  reader.h.78E5E10DD4E51CCC.idx  reader.h.9CF63D2E27D09CB8.idx
.cmake/api/v1/reply/: cache-v2-914244f0e88c5f3cdf37.json  cmakeFiles-v1-156dff6dc74574cfb47b.json  codemodel-v2-f8f490b21b2397e595bf.json  index-2022-10-25T14-26-09-0169.json  target-test-8a47759c4ef8df9a5c52.json
go-tools/: gen.go  go.mod  go.sum  tools.go  var.ini
src/: base.hxx  container.hxx  emailType.hxx  fundamental.hxx  gen.cpp  personType.hxx  reader.cpp  reader.h  traits.hxx  type.h
